--- a/pizzaria/backend/package.json
+++ b/pizzaria/backend/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.13",
     "ts-node-dev": "^1.1.8",
@@ -18,6 +19,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.21.1",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.17.2",
     "express-async-errors": "^3.1.1",
