--- a/pizzaria/backend/package.json
+++ b/pizzaria/backend/package.json
@@ -14,6 +14,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^9.0.7",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.5.5"
   },
@@ -21,8 +22,10 @@
     "@prisma/client": "^5.21.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.17.2",
     "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^9.0.2",
     "prisma": "^5.21.1"
   }
 }
