--- a/pizzaria/backend/package.json
+++ b/pizzaria/backend/package.json
@@ -15,6 +15,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^9.0.7",
+    "@types/multer": "^1.4.12",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.5.5"
   },
@@ -26,6 +27,7 @@
     "express": "^4.17.2",
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "prisma": "^5.21.1"
   }
 }
