--- a/pizzaria/frontend/package.json
+++ b/pizzaria/frontend/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "axios": "^1.7.7",
     "cookies-next": "^4.3.0",
+    "lucide-react": "^0.454.0",
     "next": "15.0.2",
     "react": "19.0.0-rc-02c0e824-20241028",
     "react-dom": "19.0.0-rc-02c0e824-20241028",
-    "sass": "^1.80.5"
+    "sass": "^1.80.5",
+    "sonner": "^1.6.1"
   },
   "devDependencies": {
     "@types/node": "^20",
