--- a/pizzaria/backend/package.json
+++ b/pizzaria/backend/package.json
@@ -3,11 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node-dev --transpile-only src/server.ts",
+    "dev": "ts-node-dev src/server.ts",
     "build": "tsc --build",
     "start": "node dist/server.js",
-    "vercel-build":"prisma generate && prisma migrate deploy",
+    "vercel-build": "prisma generate && prisma migrate deploy",
     "prisma:generate": "prisma generate"
   },
   "keywords": [],
