--- a/pizzaria/backend/vercel.json
+++ b/pizzaria/backend/vercel.json
@@ -1,16 +1,16 @@
 {
-  "version": 2,
-  "builds": [
-      {
-          "src": "pizzaria/backend/dist/server.js",
-          "use": "@vercel/node",
-          "config": { "includeFiles": ["pizzaria/backend/dist/**"] }
-      }
-  ],
-  "routes": [
-      {
-          "src": "/(.*)",
-          "dest": "pizzaria/backend/dist/server.js"
-      }
-  ]
-}
+    "version": 2,
+    "builds": [
+        {
+            "src": "dist/server.js",
+            "use": "@vercel/node",
+            "config": { "includeFiles": ["dist/**"] }
+        }
+    ],
+    "routes": [
+        {
+            "src": "/(.*)",
+            "dest": "dist/server.js"
+        }
+    ]
+  }
