--- a/pizzaria/backend/package.json
+++ b/pizzaria/backend/package.json
@@ -20,7 +20,8 @@
     "@types/express-fileupload": "^1.5.1",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/multer": "^1.4.12",
-    "ts-node-dev": "^1.1.8",
+    "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^4.5.5"
   },
   "dependencies": {
