--- a/pizzaria/backend/package.json
+++ b/pizzaria/backend/package.json
@@ -20,6 +20,7 @@
     "@types/express-fileupload": "^1.5.1",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/multer": "^1.4.12",
+    "@types/pg": "^8.15.6",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.5.5"
@@ -35,6 +36,7 @@
     "express-fileupload": "^1.5.1",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
+    "pg": "^8.16.3",
     "prisma": "^5.21.1"
   }
 }
